# PlexTogglTracker

./: README.md  config-template.json  run.py  setup.cfg  start.sh
plextoggltracker/: __init__.py  config.py  listener.py  toggl.py
rin/: __init__.py  listener.py  toggl.py
