[metadata]
name = PlexTogglTracker
url = "https://github.com/twissell-/PlexTogglTracker"
version = 0.0.1
author = Demo
author_email = dmaggioesne@gmail.com
description = "A simple webhook for tracking to Toggl the time spent watching stuff on Plex."
long_description = file: README.md
license = MIT
classifiers = 
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",

[options]
packages = find:
python_requires = >=3.7
install_requires =
    flask
    requests
